--- a/app/src/main/res/layout/earthquake_item.xml
+++ b/app/src/main/res/layout/earthquake_item.xml
@@ -7,23 +7,95 @@
 
         <variable
             name="items"
-            type="com.example.earthquakeapp.api.models.Earthquake.Feature"/>
+            type="com.example.earthquakeapp.api.models.Earthquake.Feature" />
 
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="2dp"
+        android:layout_margin="2dp"
+        android:layout_marginTop="3dp"
+        android:padding="3dp"
+        app:cardCornerRadius="8dp"
         app:cardElevation="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text = "jakarta"
-            android:text="@{items.Properties.place}"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_sky_blue"
+            >
+
+
+            <TextView
+                android:id="@+id/magTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/cashin_inactive"
+                android:fontFamily="@font/roboto_serif_36pt_medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/detailsLinearlay"
+                app:layout_constraintHorizontal_bias="0.39"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.49"
+                tools:text="5.6" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="80dp" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/detailsLinearlay"
+                android:layout_width="291dp"
+                android:layout_height="104dp"
+                android:layout_marginStart="34dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.807"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+                <TextView
+                    android:id="@+id/titleTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/robotoserif_regular"
+
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    tools:text="M 1.3 - 10km SSW of Idyllwild, CA" />
+
+                <TextView
+                    android:id="@+id/cityTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:fontFamily="@font/roboto_serif_36pt_light"
+
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    tools:text="10km SSW of Idyllwild, CA10km SSW of Idyllwild, CA" />
+
+                <TextView
+                    android:id="@+id/timeTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:fontFamily="@font/robotoserif_36pt_lightitalic"
+                    tools:text="12/12/2020" />
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 </layout>
